# PhoenixBoot

./: .bish-index  .bish.sqlite  .env.example  .gitignore  .pf_fix.py  AGENTS.md  ALPHA_RELEASE_PLAN.md  AMAZON_Q_REVIEW_2025-12-22.md  BOOTKIT_DEFENSE_WORKFLOW.md  CHANGELOG.md  CHANGELOG_CONSOLIDATED.md  CHANGES  CICD_REVIEW_ROLLUP.md  CICD_REVIEW_ROLLUP_2025-12-27.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONSOLIDATED_PR_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_CLEANUP_SUMMARY.md  GETTING_STARTED.md  GPT5_CODE_ANALYSIS_2025-12-22.md  HOTSPOTS  IMPLEMENTATION_KERNEL_HARDENING.md  IMPLEMENTATION_SUMMARY.md  ISSUE_RESOLUTION_SUMMARY.md  LICENSE  Makefile  PF_TASK_CHECK_SUMMARY.md  PR_CONSOLIDATION_SUMMARY.md  PR_SUMMARY.md  Pfyfile.pf  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SECUREBOOT_QUICKSTART.md  SECURE_BOOT_IMPLEMENTATION_SUMMARY.md  SECURITY.md  SECURITY_REVIEW_2025-12-07.md  TESTING_SUMMARY.md  TODO  (+53 more)
.github/: .bish-index  (+1 more)
pf-runner/: Makefile  example_grammar_features.pf  pf  pf.lark  pf_api.py  pf_args.py  pf_builtin_commands.py  pf_grammar.py  pf_lark_parser.py  pf_main.py  pf_parser.py  pf_polyglot.py  pf_prune.py  pf_runtime.sh  pf_shell.py  pf_subcommand_manager.py  pf_task_executor.py  pf_universal  pyproject.toml  test.pf
pf-runner/bak/: Makefile  pf_native.sh  pf_parser.py.broken  pf_universal  setup.py
pf-runner/docs/: ARCHITECTURE.md  BUILD-HELPERS.md  CHANGELOG_GRAMMAR_UPDATE.md  LANGS.md  README.md  SHIP-THIS-FIRST.md  SUBCOMMANDS.md  pf-runner-full.md
pf-runner/pf_runner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+616 files in other folders)
